<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/darkTextColor"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_name"
                android:textColor="@color/lightTextColor"
                android:textSize="16sp"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@color/darkTextColor"
                    android:textColorHint="@color/lightTextColor"
                    android:imeOptions="actionGo"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />
            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:text="@string/start_button"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>